; ModuleID = '/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_d68010_rtd.c'
source_filename = "/home/carl/AnghaBench/capstone/arch/M68K/extr_M68KDisassembler.c_d68010_rtd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M68K_GRP_RET = common dso_local global i32 0, align 4
@M68010_PLUS = common dso_local global i32 0, align 4
@M68K_INS_RTD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @d68010_rtd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68010_rtd(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @M68K_GRP_RET, align 4
  %5 = call i32 @set_insn_group(i32* %3, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @M68010_PLUS, align 4
  %8 = call i32 @LIMIT_CPU_TYPES(i32* %6, i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @M68K_INS_RTD, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @read_imm_16(i32* %11)
  %13 = call i32 @build_absolute_jump_with_immediate(i32* %9, i32 %10, i32 0, i32 %12)
  ret void
}

declare dso_local i32 @set_insn_group(i32*, i32) #1

declare dso_local i32 @LIMIT_CPU_TYPES(i32*, i32) #1

declare dso_local i32 @build_absolute_jump_with_immediate(i32*, i32, i32, i32) #1

declare dso_local i32 @read_imm_16(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
